fix(ARC-2874): fix icon centering on safari
https://meemoo.atlassian.net/browse/ARC-2874

--- a/src/modules/shared/components/Icon/Icon.module.scss
+++ b/src/modules/shared/components/Icon/Icon.module.scss
@@ -14,6 +14,10 @@
 	line-height: $line-height-base;
 	white-space: nowrap;
 
+	// Fix icon rendering on safari
+	// https://meemoo.atlassian.net/browse/ARC-2874
+	text-align: left;
+
 	// Enable Ligatures
 	font-feature-settings: "liga";
 	font-variant-ligatures: discretionary-ligatures;
